--- a/com.automation.aws.testing/test-output/old/Default suite/methods.html
+++ b/com.automation.aws.testing/test-output/old/Default suite/methods.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f47664">  <td>20/05/18 16:09:20</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Driver.setUp()[pri:0, instance:com.automation.aws.testing.test.Keyboard_Keys@404bbcbd]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="d9cbf5">  <td>20/05/18 16:09:32</td>   <td>11986</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Keyboard_Keys.test()[pri:0, instance:com.automation.aws.testing.test.Keyboard_Keys@404bbcbd]">test</td> 
-  <td>main@1558103808</td>   <td></td> </tr>
-<tr bgcolor="f47664">  <td>20/05/18 16:09:41</td>   <td>21660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Driver.tearDown(org.testng.ITestResult)[pri:0, instance:com.automation.aws.testing.test.Keyboard_Keys@404bbcbd]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1558103808</td>   <td></td> </tr>
+<tr bgcolor="9bfa76">  <td>20/05/24 16:57:39</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Driver.setUp()[pri:0, instance:com.automation.aws.testing.test.Search_Zomato_TC@2e6a8155]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1987375157</td>   <td></td> </tr>
+<tr bgcolor="d7f8ca">  <td>20/05/24 16:57:47</td>   <td>7791</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Search_Zomato_TC.beforeClass()[pri:0, instance:com.automation.aws.testing.test.Search_Zomato_TC@2e6a8155]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1987375157</td>   <td></td> </tr>
+<tr bgcolor="d7f8ca">  <td>20/05/24 16:57:47</td>   <td>7802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search_Zomato_TC.testCase1()[pri:0, instance:com.automation.aws.testing.test.Search_Zomato_TC@2e6a8155]">testCase1</td> 
+  <td>main@1987375157</td>   <td></td> </tr>
+<tr bgcolor="9bfa76">  <td>20/05/24 16:57:59</td>   <td>20158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Driver.tearDown(org.testng.ITestResult)[pri:0, instance:com.automation.aws.testing.test.Search_Zomato_TC@2e6a8155]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1987375157</td>   <td></td> </tr>
+<tr bgcolor="d7f8ca">  <td>20/05/24 16:58:00</td>   <td>20402</td> <td>&nbsp;</td><td title="&lt;&lt;Search_Zomato_TC.endTest()[pri:0, instance:com.automation.aws.testing.test.Search_Zomato_TC@2e6a8155]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1987375157</td>   <td></td> </tr>
 </table>
